# OAP

./: .gitignore  .travis.yml  GitHubAppTesting.txt  README.md  Spark-OAP-Integration-Guide.md  patch.txt  pom.xml
.github/workflows/: report_ram_log.yml  tpch.yml
benchmark/: pom.xml  run_benchmark.sh
benchmark/src/main/scala/test/: Add.scala  ColumnarAdd.scala  ColumnarAddMulti.scala  ColumnarBatchScan.scala  ColumnarFilter.scala  ColumnarMultiply.scala  ReadWriteBench.scala
core/: pom.xml
core/src/main/java/com/intel/sparkColumnarPlugin/expression/: ArrowColumnarBatch.java  ColumnarArithmeticOptimizer.java  ColumnarArithmeticWithGandiva.java
core/src/main/java/com/intel/sparkColumnarPlugin/vectorized/: AdaptorReferenceManager.java  ArrowBufBuilder.java  ArrowFieldNodeBuilder.java  ArrowRecordBatchBuilder.java  ArrowRecordBatchBuilderImpl.java  BatchIterator.java  (+3 more)
core/src/main/java/org/apache/spark/: JavaSparkListener.java  SparkFirehoseListener.java
core/src/main/scala/com/intel/sparkColumnarPlugin/: ColumnarPlugin.scala
core/src/main/scala/org/apache/spark/: HeartbeatReceiver.scala
core/src/test/scala/com.intel.sparkColumnarPlugin/: ExtensionSuite.scala
cpp/src/: CMakeLists.txt  Makefile  arrow_compute_code_generator.h  arrow_compute_expr_visitor.cc  arrow_compute_expr_visitor.h  code_generator.h  code_generator_factory.h  compute_ext_code_generator.h  expr_visitor.cc  expr_visitor.h  gandiva_code_generator.h  jni_wrapper.cc
cpp/src/benchmarks/: CMakeLists.txt  arrow_compute_benchmark.cc  arrow_compute_benchmark_big_scale.cc  arrow_compute_benchmark_join.cc
cpp/src/codegen/: code_generator.h  code_generator_factory.h  expr_visitor.cc  expr_visitor.h  test.cc  test_1.cc
cpp/src/codegen/arrow_compute/: arrow_compute_code_generator.h  arrow_compute_expr_visitor.cc  arrow_compute_expr_visitor.h  code_generator.h  expr_visitor.cc  expr_visitor.h  expr_visitor_impl.h
cpp/src/codegen/arrow_compute/ext/: actions_impl.h  append.h  array_builder_impl.h  array_ext.h  codegen_node_visitor.cc  codegen_node_visitor_v2.cc  conditioned_probe_kernel.cc  conditioned_shuffle_kernel.cc  item_iterator.h  kernels_ext.cc  kernels_ext.h  kernels_ext_base.h  shuffle_v2_action.cc  shuffle_v2_action.h  split.h
cpp/src/codegen/common/: result_iterator.h  visitor_base.h
cpp/src/codegen/compute_ext/: code_generator.h  compute_ext_code_generator.h
cpp/src/codegen/gandiva/: code_generator.h  gandiva_code_generator.h
cpp/src/gandiva/: Makefile  Types.pb.cc  Types.pb.h  jni_common.h
cpp/src/jni/: jni_common.h  jni_wrapper.cc
cpp/src/tests/: CMakeLists.txt  arrow_compute_test.cc  arrow_compute_test_join.cc  test_utils.h
dev/: run-tests.py
dev/sparktestsupport/: modules.py
docs/: Developer-Guide.md  OAP-Architect-Overview.md  OAP-Design.md  OAP-User-Guide.md  Spark.2.3.2.numa.patch  hashjoin-revert.patch
oap-cache/: README.md
oap-cache/oap/: pom.xml
oap-data-source/arrow/: README.md  pom.xml
oap-native-sql/: README.md  pom.xml  text.txt
oap-native-sql/benchmark/: pom.xml
oap-native-sql/benchmark/src/main/scala/test/: Add.scala  ColumnarAdd.scala  ColumnarAddMulti.scala  ColumnarFilter.scala  ColumnarMultiply.scala  ReadWriteBench.scala
oap-native-sql/core/: pom.xml
oap-native-sql/core/src/test/resources/tpch/: q16.sql  q17.sql  q19.sql
oap-native-sql/core/src/test/scala/com.intel.sparkColumnarPlugin/: ExtensionSuite.scala
oap-native-sql/cpp/: compile.sh
oap-native-sql/cpp/src/: CMakeLists.txt
oap-native-sql/cpp/src/benchmarks/: CMakeLists.txt  arrow_compute_benchmark.cc  arrow_compute_benchmark_big_scale.cc  arrow_compute_benchmark_join.cc  arrow_compute_benchmark_sort.cc
oap-native-sql/cpp/src/codegen/: code_generator.h  code_generator_factory.h  expr_visitor.cc  expr_visitor.h
oap-native-sql/cpp/src/codegen/arrow_compute/: code_generator.h  expr_visitor.cc  expr_visitor.h  expr_visitor_impl.h
oap-native-sql/cpp/src/codegen/arrow_compute/ext/: actions_impl.h  array_item_index.h  code_generator_base.h  codegen_common.cc  codegen_common.h  codegen_node_visitor.h  codegen_node_visitor_v2.cc  codegen_node_visitor_v2.h  conditioned_probe_kernel.cc  conditioned_shuffle_kernel.cc  conditioner.h  item_iterator.cc  kernels_ext.cc  kernels_ext.h  probe_kernel.cc  shuffle_v2_action.cc  shuffle_v2_action.h  sort_kernel.cc  window_sort_kernel.h
oap-native-sql/cpp/src/codegen/common/: hash_relation.h  result_iterator.h  visitor_base.h
oap-native-sql/cpp/src/codegen/gandiva/: code_generator.h
oap-native-sql/cpp/src/jni/: jni_common.h  jni_wrapper.cc
oap-native-sql/cpp/src/proto/: protobuf_utils.cc  protobuf_utils.h
oap-native-sql/cpp/src/shuffle/: partition_writer.cc  splitter.cc  type.h  utils.h
oap-native-sql/cpp/src/tests/: CMakeLists.txt  arrow_compute_test_aggregate.cc  arrow_compute_test_sort.cc  shuffle_split_test.cc  test_utils.h
oap-native-sql/cpp/src/utils/: macros.h
oap-native-sql/resource/: ApacheArrowInstallation.md
oap-shuffle/: README.md
oap-shuffle/remote-shuffle/: .travis.yml  README.md  pom.xml  scalastyle-config.xml
patches/: OAP-SparkEnv-numa-binding.patch
patches/v2.3.2/: Spark2.3.2-fix-broadcast-hash-join-issue.patch  Spark2.3.2-support-numa-binding.patch
patches/v2.4.4/: Spark2.4.4-support-numa-binding.patch
resource/: ApacheArrowInstallation.md
scripts/: apply_patch_to_oap.sh  apply_patch_to_spark.sh
src/main/java/org/apache/orc/impl/: RecordReaderCacheImpl.java
src/main/java/org/apache/parquet/hadoop/: MrOapRecordReader.java  ParquetFiberDataReader.java  SpecificOapRecordReaderBase.java
src/main/java/org/apache/spark/unsafe/: VMEMCacheJNI.java
src/main/native/: org_apache_spark_unsafe_PersistentMemoryPlatform.cpp
src/main/scala/org/apache/spark/: HeartbeatReceiver.scala
src/main/scala/org/apache/spark/executor/: Executor.scala
src/main/scala/org/apache/spark/sql/: OapExtensions.scala  OapSession.scala
src/main/spark2.4.0-cdh6.3.1/scala/org/apache/spark/: SparkEnv.scala
src/main/spark2.4.4/scala/org/apache/spark/: SparkEnv.scala
src/test/scala/org/apache/spark/sql/: TestOap.scala
(+381 files in other folders)
